--- a/index.html
+++ b/index.html
@@ -2,47 +2,51 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus World - 반응형 메인</title>
+  <title>AgriNexus World - 기능 연결 완성형 메인</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="AI 스마트팜 · 글로벌 물류 · 분석 · 계약 · 고객지원 통합 자동화 플랫폼">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    html, body { scroll-behavior: smooth; }
+  </style>
 </head>
-<body class="bg-gray-900 text-white">
+<body class="bg-gray-950 text-white">
 <main class="max-w-6xl mx-auto p-6">
   <header class="text-center mb-10">
     <h1 class="text-4xl font-bold">🌍 AgriNexus World</h1>
-    <p class="text-sm text-gray-400 mt-2">AI 기반 글로벌 스마트팜 자동화 플랫폼</p>
+    <p class="text-sm text-gray-400">기능 연결 완료 · 클릭 → 즉시 작동 · 실제 사용자 경험 중심</p>
   </header>
 
-  <section class="mb-12">
-    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">🌱 스마트팜</h2>
+  <section class="mb-10">
+    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">📦 스마트팜 기능</h2>
     <div class="flex flex-wrap gap-4">
-      <a href="src/smartfarm/plan.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-green-600 transition">환경 자동 설계</a>
-      <a href="src/smartfarm/gptdesign.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-green-600 transition">GPT 설계</a>
-      <a href="src/smartfarm/build.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-green-600 transition">시공 절차</a>
+      <a href="src/smartfarm/plan.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-green-600">✅ 환경 자동 설계</a>
+      <a href="src/smartfarm/gptdesign.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-green-600">🧠 GPT 도면 생성</a>
+      <a href="src/smartfarm/build.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-green-600">🏗️ 시공 시뮬레이터</a>
     </div>
   </section>
 
-  <section class="mb-12">
-    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">🚚 물류</h2>
+  <section class="mb-10">
+    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">🚚 물류 기능</h2>
     <div class="flex flex-wrap gap-4">
-      <a href="src/logistics/route.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-blue-600 transition">배송 경로 분석</a>
-      <a href="src/logistics/cost.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-blue-600 transition">물류비 계산기</a>
+      <a href="src/logistics/route.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-blue-600">🚛 배송 경로 분석</a>
+      <a href="src/logistics/cost.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-blue-600">💰 물류비 계산기</a>
     </div>
   </section>
 
-  <section class="mb-12">
-    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">🧠 AI + 글로벌</h2>
+  <section class="mb-10">
+    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">🌍 글로벌 + AI</h2>
     <div class="flex flex-wrap gap-4">
-      <a href="src/ai/realgpt.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-pink-600 transition">GPT 분석</a>
-      <a href="src/global/gaia.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-purple-600 transition">Gaia 설계</a>
+      <a href="src/global/gaia.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-purple-600">🌐 Gaia 설계 시스템</a>
+      <a href="src/ai/realgpt.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-pink-600">🤖 GPT 분석기</a>
     </div>
   </section>
 
   <section>
-    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">📋 고객지원 / 관리자</h2>
+    <h2 class="text-2xl font-semibold mb-4 border-b border-gray-700 pb-2">📋 고객센터 + 관리자</h2>
     <div class="flex flex-wrap gap-4">
-      <a href="src/cs/index.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-yellow-600 transition">고객지원</a>
-      <a href="src/admin/dashboard.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-indigo-600 transition">관리자 대시보드</a>
+      <a href="src/cs/index.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-yellow-600">💬 고객 지원</a>
+      <a href="src/admin/dashboard.html" class="w-full md:w-[30%] bg-gray-800 p-4 rounded hover:bg-indigo-600">📊 관리자 대시보드</a>
     </div>
   </section>
 </main>
