--- a/landing.html
+++ b/landing.html
@@ -2,23 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus - AI-Powered Global Farming System</title>
+  <title>Welcome to AgriNexus 🌍</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="World's first AI-powered smart farming + logistics automation platform. Join for free today.">
-  <meta name="keywords" content="smartfarm, AI agriculture, logistics, global farming, agri automation, agritech">
-  <meta property="og:title" content="AgriNexus - World's #1 Smart Farming Platform">
-  <meta property="og:description" content="Try real-time AI smart farming, logistics, export management. Join for free!">
-  <meta property="og:image" content="/promo/banner.png">
+  <meta name="description" content="Try AgriNexus smart farm simulator, export automation, logistics AI.">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-black text-white">
-  <main class="max-w-4xl mx-auto text-center p-8">
-    <h1 class="text-4xl font-bold mb-4">🌐 AgriNexus World</h1>
-    <p class="text-lg mb-6 text-gray-300">AI + Automation for Smart Farming and Global Logistics</p>
-    <a href="/signup.html" class="bg-green-500 text-white px-6 py-3 rounded text-lg">🚀 Try it Free Now</a>
-    <div class="mt-8 text-sm text-gray-500">
-      View full features → <a href="/src/dashboard/index.html" class="underline">Global Dashboard</a>
-    </div>
-  </main>
+<body class="bg-black text-white text-center p-10">
+  <h1 class="text-4xl font-bold mb-6">🌍 Welcome to AgriNexus World</h1>
+  <p class="mb-4 text-gray-400">AI Smart Farming · Global Logistics · Real-time Automation</p>
+  <a href="index.html" class="bg-green-500 px-6 py-3 rounded text-lg text-white">Explore the Platform →</a>
+  <p class="mt-6 text-sm text-gray-600">Join over 10,000 users optimizing agriculture & trade in real-time.</p>
 </body>
 </html>
