--- a/index-scroll.html
+++ b/index-scroll.html
@@ -83,6 +83,17 @@
       <a href="src/poster/index.html" class="card">📢 기능 포스터<br><span class="text-xs text-gray-300">기능별 요약 이미지</span></a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🆕 최신 추가 기능</h2>
+    <div class="scroll-container">
+      <a href="src/estimate/index.html" class="card">🧾 견적서 PDF 생성</a>
+      <a href="src/weather/index.html" class="card">🌤️ 기후 정보</a>
+      <a href="src/feedback/index.html" class="card">📥 피드백 수집</a>
+      <a href="src/admin/logs.html" class="card">📈 기록 조회</a>
+      <a href="src/admin/settings.html" class="card">🔒 관리자 설정</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
