--- a/src/feedback/index.html
+++ b/src/feedback/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="UTF-8"><title>🔒 설정 패널</title>
+<head><meta charset="UTF-8"><title>📥 피드백 수집기</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head><body class="bg-gray-900 text-white"><main class="max-w-3xl mx-auto p-6">
-<h1 class="text-2xl font-bold mb-2">🔒 설정 패널</h1>
-<p class="text-sm text-gray-400">기능 토글 및 관리자 설정 관리</p>
+<h1 class="text-2xl font-bold mb-2">📥 피드백 수집기</h1>
+<p class="text-sm text-gray-400">사용자 의견/건의 실시간 저장</p>
 </main></body></html>
