--- a/src/weather/index.html
+++ b/src/weather/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head><meta charset="UTF-8"><title>🔒 설정 패널</title>
+<head><meta charset="UTF-8"><title>🌤️ 실시간 기후 조회</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head><body class="bg-gray-900 text-white"><main class="max-w-3xl mx-auto p-6">
-<h1 class="text-2xl font-bold mb-2">🔒 설정 패널</h1>
-<p class="text-sm text-gray-400">기능 토글 및 관리자 설정 관리</p>
+<h1 class="text-2xl font-bold mb-2">🌤️ 실시간 기후 조회</h1>
+<p class="text-sm text-gray-400">국가/도시별 기후 및 날씨 정보 조회</p>
 </main></body></html>
