--- a/index-scroll.html
+++ b/index-scroll.html
@@ -94,6 +94,18 @@
       <a href="src/admin/settings.html" class="card">🔒 관리자 설정</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🧠 고급 확장 기능</h2>
+    <div class="scroll-container">
+      <a href="src/contract/summary.html" class="card">🧠 계약 요약</a>
+      <a href="src/brand/compare.html" class="card">🏷️ 브랜드 비교</a>
+      <a href="src/api/partners.html" class="card">🔗 API 연동</a>
+      <a href="src/global/policy.html" class="card">📋 정책 DB</a>
+      <a href="src/email/send.html" class="card">📤 이메일 발송</a>
+      <a href="src/admin/check.html" class="card">🧩 기능 진단</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
