--- a/index-scroll.html
+++ b/index-scroll.html
@@ -106,6 +106,17 @@
       <a href="src/admin/check.html" class="card">🧩 기능 진단</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🚀 차세대 글로벌 기능</h2>
+    <div class="scroll-container">
+      <a href="src/map/satellite.html" class="card">📡 위성 지도</a>
+      <a href="src/proposal/auto.html" class="card">🧾 제안서 생성</a>
+      <a href="src/ai/behavior.html" class="card">🧠 행동 추천</a>
+      <a href="src/seed/analyze.html" class="card">🌾 종자 분석</a>
+      <a href="src/system/recover.html" class="card">♻️ 복구 시스템</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
