--- a/index-scroll.html
+++ b/index-scroll.html
@@ -39,6 +39,17 @@
       <a href="src/admin/history.html" class="card">🔄 기능 히스토리</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🌐 실시간 AI + 국제화 확장</h2>
+    <div class="scroll-container">
+      <a href="src/weather/alert.html" class="card">🛰️ 재해 알림</a>
+      <a href="src/media/player.html" class="card">📦 기능 영상</a>
+      <a href="src/translate/proposal.html" class="card">🧾 제안서 번역</a>
+      <a href="src/ai/map.html" class="card">🧠 시나리오 맵</a>
+      <a href="src/email/welcome.html" class="card">📬 환영 메일</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
