--- a/index-scroll.html
+++ b/index-scroll.html
@@ -50,6 +50,17 @@
       <a href="src/email/welcome.html" class="card">📬 환영 메일</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🛠️ 운영 자동화 · 사용자 권한</h2>
+    <div class="scroll-container">
+      <a href="src/guide/wizard.html" class="card">🧭 기능 추천</a>
+      <a href="src/admin/banner.html" class="card">📣 배너 관리자</a>
+      <a href="src/user/levels.html" class="card">📥 회원 등급</a>
+      <a href="src/payment/receipt.html" class="card">🧾 영수증 생성</a>
+      <a href="src/admin/usage.html" class="card">📊 사용 통계</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
