--- a/index-scroll.html
+++ b/index-scroll.html
@@ -61,6 +61,17 @@
       <a href="src/admin/usage.html" class="card">📊 사용 통계</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🚀 자율 운영 · AI 확장</h2>
+    <div class="scroll-container">
+      <a href="src/auto/simulator.html" class="card">🧠 자율 운영</a>
+      <a href="src/api/integrate.html" class="card">🔄 API 연동</a>
+      <a href="src/seed/lab.html" class="card">🧬 종자 실험실</a>
+      <a href="src/contract/signature.html" class="card">🧾 서명 뷰어</a>
+      <a href="src/map/envmap.html" class="card">📍 설치 맵</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
