--- a/index-scroll.html
+++ b/index-scroll.html
@@ -72,6 +72,17 @@
       <a href="src/map/envmap.html" class="card">📍 설치 맵</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🏅 AgriNexus 설립자 · 공식 이력</h2>
+    <div class="scroll-container">
+      <a href="src/about/founder.html" class="card">🧾 설립자 소개</a>
+      <a href="src/about/certificate.html" class="card">🏛️ 인증서</a>
+      <a href="src/about/globalcerts.html" class="card">🌐 국제 인증</a>
+      <a href="src/about/press.html" class="card">📰 언론/수상</a>
+      <a href="src/about/history.html" class="card">🧭 연혁 보기</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
