--- a/index-scroll.html
+++ b/index-scroll.html
@@ -2,16 +2,14 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus - 기능 확장 카드바</title>
+  <title>AgriNexus Scroll Platform</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     .scroll-container {
       display: flex;
-      flex-wrap: nowrap;
       overflow-x: auto;
       gap: 1rem;
-      padding: 1rem;
       scroll-snap-type: x mandatory;
     }
     .card {
@@ -27,60 +25,16 @@
   </style>
 </head>
 <body class="bg-gray-900 text-white">
-<main class="max-w-7xl mx-auto px-6 py-10">
-  <h1 class="text-3xl font-bold mb-6 text-center">🌍 AgriNexus 확장 기능 카드</h1>
+<main class="max-w-6xl mx-auto px-6 py-10">
+  <h1 class="text-3xl font-bold text-center mb-6">AgriNexus 창립자 시스템</h1>
   <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📊 실사용 확장 기능</h2>
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">👑 설립자 비전 · 명예관</h2>
     <div class="scroll-container">
-      <a href="src/media/demo.html" class="card">📹 기능 영상</a>
-      <a href="src/smartfarm/3dbuild.html" class="card">🏗️ 3D 시공</a>
-      <a href="src/ai/scenario.html" class="card">🧑‍🌾 자동 시나리오</a>
-      <a href="src/investor/report.html" class="card">📈 투자 보고서</a>
-      <a href="src/admin/history.html" class="card">🔄 기능 히스토리</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🌐 실시간 AI + 국제화 확장</h2>
-    <div class="scroll-container">
-      <a href="src/weather/alert.html" class="card">🛰️ 재해 알림</a>
-      <a href="src/media/player.html" class="card">📦 기능 영상</a>
-      <a href="src/translate/proposal.html" class="card">🧾 제안서 번역</a>
-      <a href="src/ai/map.html" class="card">🧠 시나리오 맵</a>
-      <a href="src/email/welcome.html" class="card">📬 환영 메일</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🛠️ 운영 자동화 · 사용자 권한</h2>
-    <div class="scroll-container">
-      <a href="src/guide/wizard.html" class="card">🧭 기능 추천</a>
-      <a href="src/admin/banner.html" class="card">📣 배너 관리자</a>
-      <a href="src/user/levels.html" class="card">📥 회원 등급</a>
-      <a href="src/payment/receipt.html" class="card">🧾 영수증 생성</a>
-      <a href="src/admin/usage.html" class="card">📊 사용 통계</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🚀 자율 운영 · AI 확장</h2>
-    <div class="scroll-container">
-      <a href="src/auto/simulator.html" class="card">🧠 자율 운영</a>
-      <a href="src/api/integrate.html" class="card">🔄 API 연동</a>
-      <a href="src/seed/lab.html" class="card">🧬 종자 실험실</a>
-      <a href="src/contract/signature.html" class="card">🧾 서명 뷰어</a>
-      <a href="src/map/envmap.html" class="card">📍 설치 맵</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🏅 AgriNexus 설립자 · 공식 이력</h2>
-    <div class="scroll-container">
-      <a href="src/about/founder.html" class="card">🧾 설립자 소개</a>
-      <a href="src/about/certificate.html" class="card">🏛️ 인증서</a>
-      <a href="src/about/globalcerts.html" class="card">🌐 국제 인증</a>
-      <a href="src/about/press.html" class="card">📰 언론/수상</a>
-      <a href="src/about/history.html" class="card">🧭 연혁 보기</a>
+      <a href="src/about/interview.html" class="card">🧑‍💼 인터뷰 생성기</a>
+      <a href="src/about/vision.html" class="card">🌐 비전 슬로건</a>
+      <a href="src/about/message.html" class="card">📹 메시지 영상</a>
+      <a href="src/about/dna.html" class="card">🧬 AgriNexus DNA</a>
+      <a href="src/about/legacy.html" class="card">🏆 명예관</a>
     </div>
   </section>
 </main>
