--- a/index-scroll.html
+++ b/index-scroll.html
@@ -37,6 +37,17 @@
       <a href="src/about/legacy.html" class="card">🏆 명예관</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🎓 사용자 신뢰 · 학습 · 철학</h2>
+    <div class="scroll-container">
+      <a href="src/ai/chatbot.html" class="card">🧠 AI 상담봇</a>
+      <a href="src/guide/academy.html" class="card">📚 학습센터</a>
+      <a href="src/about/success.html" class="card">✨ 성공사례</a>
+      <a href="src/about/philosophy.html" class="card">🔍 철학 문답</a>
+      <a href="src/global/langswitch.html" class="card">🌐 다국어 전환</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
