--- a/index-scroll.html
+++ b/index-scroll.html
@@ -48,6 +48,17 @@
       <a href="src/global/langswitch.html" class="card">🌐 다국어 전환</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📡 실시간 운영 · 반응 시스템</h2>
+    <div class="scroll-container">
+      <a href="src/admin/overview.html" class="card">📊 대시보드</a>
+      <a href="src/user/liveboard.html" class="card">💬 사용자 반응</a>
+      <a href="src/admin/geomap.html" class="card">🌍 국가별 지도</a>
+      <a href="src/system/report.html" class="card">🧠 운영 진단</a>
+      <a href="src/admin/notice.html" class="card">🔔 팝업 알림</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
