--- a/index-scroll.html
+++ b/index-scroll.html
@@ -59,6 +59,17 @@
       <a href="src/admin/notice.html" class="card">🔔 팝업 알림</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🧠 자동 제어 · 맞춤 사용자 기능</h2>
+    <div class="scroll-container">
+      <a href="src/system/autofix.html" class="card">🆘 자동 복구</a>
+      <a href="src/admin/modules.html" class="card">🧩 모듈 토글</a>
+      <a href="src/user/dashboard.html" class="card">👥 사용자 대시보드</a>
+      <a href="src/user/recent.html" class="card">🔄 최근 기능</a>
+      <a href="src/help/functions.html" class="card">📦 기능 도움말</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
