--- a/index-scroll.html
+++ b/index-scroll.html
@@ -70,6 +70,17 @@
       <a href="src/help/functions.html" class="card">📦 기능 도움말</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📁 실무 연동 · 분석 도구</h2>
+    <div class="scroll-container">
+      <a href="src/contract/compare.html" class="card">🧾 계약 비교</a>
+      <a href="src/ai/summarizer.html" class="card">🧠 데이터 요약</a>
+      <a href="src/tools/viewer.html" class="card">🗂️ 파일 뷰어</a>
+      <a href="src/admin/apilogs.html" class="card">🔗 API 로그</a>
+      <a href="src/global/compliance.html" class="card">🏅 인증 체크</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
