--- a/index-scroll.html
+++ b/index-scroll.html
@@ -81,6 +81,17 @@
       <a href="src/global/compliance.html" class="card">🏅 인증 체크</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📈 미래 예측 · 지속가능성 확장</h2>
+    <div class="scroll-container">
+      <a href="src/ai/profit.html" class="card">🔮 수익 예측</a>
+      <a href="src/system/energy.html" class="card">⚡ 에너지 분석</a>
+      <a href="src/admin/security.html" class="card">🛡️ 보안 리포트</a>
+      <a href="src/plugins/market.html" class="card">🧩 플러그인 마켓</a>
+      <a href="src/community/forum.html" class="card">💬 커뮤니티</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
