--- a/index-scroll.html
+++ b/index-scroll.html
@@ -92,6 +92,17 @@
       <a href="src/community/forum.html" class="card">💬 커뮤니티</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🛒 커머스 · 콘텐츠 · 자동응답</h2>
+    <div class="scroll-container">
+      <a href="src/store/equipment.html" class="card">🛒 장비 판매</a>
+      <a href="src/store/quotation.html" class="card">🧾 견적 매칭</a>
+      <a href="src/farm/diary.html" class="card">🌱 재배일지</a>
+      <a href="src/community/post.html" class="card">💬 글쓰기</a>
+      <a href="src/ai/answer.html" class="card">🧠 AI 답변</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
