--- a/index-scroll.html
+++ b/index-scroll.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus Scroll Platform</title>
+  <title>AgriNexus - 기능 카드 확장</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
@@ -26,81 +26,15 @@
 </head>
 <body class="bg-gray-900 text-white">
 <main class="max-w-6xl mx-auto px-6 py-10">
-  <h1 class="text-3xl font-bold text-center mb-6">AgriNexus 창립자 시스템</h1>
+  <h1 class="text-3xl font-bold text-center mb-6">🏢 운영 인프라 · 문서 자동화 기능</h1>
   <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">👑 설립자 비전 · 명예관</h2>
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📦 기능 목록</h2>
     <div class="scroll-container">
-      <a href="src/about/interview.html" class="card">🧑‍💼 인터뷰 생성기</a>
-      <a href="src/about/vision.html" class="card">🌐 비전 슬로건</a>
-      <a href="src/about/message.html" class="card">📹 메시지 영상</a>
-      <a href="src/about/dna.html" class="card">🧬 AgriNexus DNA</a>
-      <a href="src/about/legacy.html" class="card">🏆 명예관</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🎓 사용자 신뢰 · 학습 · 철학</h2>
-    <div class="scroll-container">
-      <a href="src/ai/chatbot.html" class="card">🧠 AI 상담봇</a>
-      <a href="src/guide/academy.html" class="card">📚 학습센터</a>
-      <a href="src/about/success.html" class="card">✨ 성공사례</a>
-      <a href="src/about/philosophy.html" class="card">🔍 철학 문답</a>
-      <a href="src/global/langswitch.html" class="card">🌐 다국어 전환</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📡 실시간 운영 · 반응 시스템</h2>
-    <div class="scroll-container">
-      <a href="src/admin/overview.html" class="card">📊 대시보드</a>
-      <a href="src/user/liveboard.html" class="card">💬 사용자 반응</a>
-      <a href="src/admin/geomap.html" class="card">🌍 국가별 지도</a>
-      <a href="src/system/report.html" class="card">🧠 운영 진단</a>
-      <a href="src/admin/notice.html" class="card">🔔 팝업 알림</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🧠 자동 제어 · 맞춤 사용자 기능</h2>
-    <div class="scroll-container">
-      <a href="src/system/autofix.html" class="card">🆘 자동 복구</a>
-      <a href="src/admin/modules.html" class="card">🧩 모듈 토글</a>
-      <a href="src/user/dashboard.html" class="card">👥 사용자 대시보드</a>
-      <a href="src/user/recent.html" class="card">🔄 최근 기능</a>
-      <a href="src/help/functions.html" class="card">📦 기능 도움말</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📁 실무 연동 · 분석 도구</h2>
-    <div class="scroll-container">
-      <a href="src/contract/compare.html" class="card">🧾 계약 비교</a>
-      <a href="src/ai/summarizer.html" class="card">🧠 데이터 요약</a>
-      <a href="src/tools/viewer.html" class="card">🗂️ 파일 뷰어</a>
-      <a href="src/admin/apilogs.html" class="card">🔗 API 로그</a>
-      <a href="src/global/compliance.html" class="card">🏅 인증 체크</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📈 미래 예측 · 지속가능성 확장</h2>
-    <div class="scroll-container">
-      <a href="src/ai/profit.html" class="card">🔮 수익 예측</a>
-      <a href="src/system/energy.html" class="card">⚡ 에너지 분석</a>
-      <a href="src/admin/security.html" class="card">🛡️ 보안 리포트</a>
-      <a href="src/plugins/market.html" class="card">🧩 플러그인 마켓</a>
-      <a href="src/community/forum.html" class="card">💬 커뮤니티</a>
-    </div>
-  </section>
-
-  <section class="mb-16">
-    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🛒 커머스 · 콘텐츠 · 자동응답</h2>
-    <div class="scroll-container">
-      <a href="src/store/equipment.html" class="card">🛒 장비 판매</a>
-      <a href="src/store/quotation.html" class="card">🧾 견적 매칭</a>
-      <a href="src/farm/diary.html" class="card">🌱 재배일지</a>
-      <a href="src/community/post.html" class="card">💬 글쓰기</a>
-      <a href="src/ai/answer.html" class="card">🧠 AI 답변</a>
+      <a href="src/data/upload.html" class="card">📊 데이터 업로드</a>
+      <a href="src/system/infrastructure.html" class="card">🏭 인프라 상태</a>
+      <a href="src/tools/convert.html" class="card">📄 문서 변환</a>
+      <a href="src/payment/invoice.html" class="card">🧾 세금계산서</a>
+      <a href="src/user/members.html" class="card">💼 멤버십</a>
     </div>
   </section>
 </main>
