--- a/index-scroll.html
+++ b/index-scroll.html
@@ -37,6 +37,17 @@
       <a href="src/user/members.html" class="card">💼 멤버십</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🏛️ 기관 · 교육 · 실행 자동화</h2>
+    <div class="scroll-container">
+      <a href="src/public/partner.html" class="card">🏛️ 제휴 신청</a>
+      <a href="src/edu/course.html" class="card">📚 교육 과정</a>
+      <a href="src/ai/autoexec.html" class="card">🤖 AI 실행기</a>
+      <a href="src/tools/download.html" class="card">📤 보고서 다운로드</a>
+      <a href="src/store/register.html" class="card">🏷️ 브랜드 등록</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
