--- a/index-scroll.html
+++ b/index-scroll.html
@@ -48,6 +48,17 @@
       <a href="src/store/register.html" class="card">🏷️ 브랜드 등록</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🚀 세계 혁신 기능 (말도 안 되는 기술)</h2>
+    <div class="scroll-container">
+      <a href="src/future/farmgenerator.html" class="card">🧠 AI 농장 생성</a>
+      <a href="src/future/satfinder.html" class="card">🛰️ 위성 농지 분석</a>
+      <a href="src/future/foodrisk.html" class="card">🧬 식량 위기 예측</a>
+      <a href="src/future/tradeai.html" class="card">🧾 AI 무역 자동화</a>
+      <a href="src/future/rdmap.html" class="card">🌐 R&D 지도</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
