--- a/index-scroll.html
+++ b/index-scroll.html
@@ -59,6 +59,17 @@
       <a href="src/future/rdmap.html" class="card">🌐 R&D 지도</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🌐 AI 협상 · 국제 분석 · 위성 확장</h2>
+    <div class="scroll-container">
+      <a href="src/ai/agent.html" class="card">🤖 계약 대리인</a>
+      <a href="src/public/matcher.html" class="card">📡 기관 매칭</a>
+      <a href="src/future/globalscan.html" class="card">🛰️ 글로벌 스캔</a>
+      <a href="src/law/summarizer.html" class="card">🧾 법령 요약</a>
+      <a href="src/future/aifarmmap.html" class="card">🗺️ AI 농장 지도</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
