--- a/index-scroll.html
+++ b/index-scroll.html
@@ -70,6 +70,17 @@
       <a href="src/future/aifarmmap.html" class="card">🗺️ AI 농장 지도</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🌐 비즈니스 · 결제 · 파트너십</h2>
+    <div class="scroll-container">
+      <a href="src/payment/gateway.html" class="card">💳 결제 모듈</a>
+      <a href="src/global/finance.html" class="card">🏦 금융 지원국</a>
+      <a href="src/tools/esign.html" class="card">🧾 전자 서명</a>
+      <a href="src/public/partners.html" class="card">🤝 파트너 등록</a>
+      <a href="src/brand/prcenter.html" class="card">📢 PR 센터</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
