--- a/index-scroll.html
+++ b/index-scroll.html
@@ -81,6 +81,17 @@
       <a href="src/brand/prcenter.html" class="card">📢 PR 센터</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">💼 AI 수익성 · ESG · 피드백 자동화</h2>
+    <div class="scroll-container">
+      <a href="src/ai/economy.html" class="card">💰 수익/비용 분석</a>
+      <a href="src/esg/checker.html" class="card">🌱 ESG 평가</a>
+      <a href="src/system/history.html" class="card">🔄 업데이트 이력</a>
+      <a href="src/ai/feedback.html" class="card">🧠 고객 인터뷰</a>
+      <a href="src/user/feedbackmap.html" class="card">📥 피드백 지도</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
