--- a/index-scroll.html
+++ b/index-scroll.html
@@ -92,6 +92,17 @@
       <a href="src/user/feedbackmap.html" class="card">📥 피드백 지도</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">📢 실사용 전시 기능 · 다운로드 · 인증</h2>
+    <div class="scroll-container">
+      <a href="src/media/autovideo.html" class="card">🎥 AI 영상</a>
+      <a href="src/contract/dashboard.html" class="card">🧾 계약 대시보드</a>
+      <a href="src/admin/usergeo.html" class="card">🌍 활동 지도</a>
+      <a href="src/public/badges.html" class="card">🤝 파트너 뱃지</a>
+      <a href="src/tools/hub.html" class="card">📥 다운로드 허브</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
