--- a/index-scroll.html
+++ b/index-scroll.html
@@ -103,6 +103,17 @@
       <a href="src/tools/hub.html" class="card">📥 다운로드 허브</a>
     </div>
   </section>
+
+  <section class="mb-16">
+    <h2 class="text-xl font-semibold mb-4 border-b border-gray-600 pb-1">🧠 AI 설치 인식 · 법률 · 정부 지원</h2>
+    <div class="scroll-container">
+      <a href="src/smartfarm/spotcheck.html" class="card">🔍 설치 분석</a>
+      <a href="src/law/viewer.html" class="card">📜 계약서 해석</a>
+      <a href="src/public/support.html" class="card">🧾 정부 지원</a>
+      <a href="src/tools/qrexec.html" class="card">🌐 QR 실행</a>
+      <a href="src/map/partnermap.html" class="card">🗺️ 파트너 지도</a>
+    </div>
+  </section>
 </main>
 </body>
 </html>
